Make sure the publish toggle is visible.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@19581 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_token.scss
+++ b/src/main/resources/scss/_token.scss
@@ -298,11 +298,12 @@ div.nt-token-wrapper{
 		}
 
 		.control.publish{
+			position: relative;
 			float: right;
 			width: 85px;
 			height: 30px;
-			position: relative;
 			cursor: pointer;
+			z-index: 10;
 
 			&::after{
 				content: '';
